#1596: Updated Item Volume model and controler, updated UCs, added tests