@@ -18,15 +18,21 @@ package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.CreateItemVolumeForm;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.control.item.server.logic.ItemVolumeTypeLogic;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.uom.common.UomConstants;
 import com.echothree.model.control.uom.server.control.UomControl;
 import com.echothree.model.control.uom.server.util.Conversion;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.Arrays;
 import java.util.Collections;
@@ -34,11 +40,19 @@ import java.util.List;
 
 public class CreateItemVolumeCommand
         extends BaseSimpleCommand<CreateItemVolumeForm> {
-    
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.ItemVolume.name(), SecurityRoles.Create.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("HeightUnitOfMeasureTypeName", FieldType.ENTITY_NAME, true, null, null),
@@ -47,12 +61,12 @@ public class CreateItemVolumeCommand
                 new FieldDefinition("Width", FieldType.UNSIGNED_LONG, true, null, null),
                 new FieldDefinition("DepthUnitOfMeasureTypeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("Depth", FieldType.UNSIGNED_LONG, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of CreateItemVolumeCommand */
     public CreateItemVolumeCommand() {
-        super(null, FORM_FIELD_DEFINITIONS, false);
+        super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
     
     @Override
@@ -71,65 +85,72 @@ public class CreateItemVolumeCommand
                 var itemUnitOfMeasureType = itemControl.getItemUnitOfMeasureType(item, unitOfMeasureType);
                 
                 if(itemUnitOfMeasureType != null) {
-                    var itemVolume = itemControl.getItemVolume(item, unitOfMeasureType);
-                    
-                    if(itemVolume == null) {
-                        var volumeUnitOfMeasureKind = uomControl.getUnitOfMeasureKindByUnitOfMeasureKindUseTypeUsingNames(UomConstants.UnitOfMeasureKindUseType_VOLUME);
-                        
-                        if(volumeUnitOfMeasureKind != null) {
-                            var heightUnitOfMeasureTypeName = form.getHeightUnitOfMeasureTypeName();
-                            var heightUnitOfMeasureType = uomControl.getUnitOfMeasureTypeByName(volumeUnitOfMeasureKind,
-                                    heightUnitOfMeasureTypeName);
-                            
-                            if(heightUnitOfMeasureType != null) {
-                                var height = Long.valueOf(form.getHeight());
-                                
-                                if(height > 0) {
-                                    var widthUnitOfMeasureTypeName = form.getWidthUnitOfMeasureTypeName();
-                                    var widthUnitOfMeasureType = uomControl.getUnitOfMeasureTypeByName(volumeUnitOfMeasureKind,
-                                            widthUnitOfMeasureTypeName);
-                                    
-                                    if(widthUnitOfMeasureType != null) {
-                                        var width = Long.valueOf(form.getWidth());
-                                        
-                                        if(width > 0) {
-                                            var depthUnitOfMeasureTypeName = form.getDepthUnitOfMeasureTypeName();
-                                            var depthUnitOfMeasureType = uomControl.getUnitOfMeasureTypeByName(volumeUnitOfMeasureKind,
-                                                    depthUnitOfMeasureTypeName);
-                                            
-                                            if(depthUnitOfMeasureType != null) {
-                                                var depth = Long.valueOf(form.getDepth());
-                                                
-                                                if(depth > 0) {
-                                                    var heightConversion = new Conversion(uomControl, heightUnitOfMeasureType, height).convertToLowestUnitOfMeasureType();
-                                                    var widthConversion = new Conversion(uomControl, widthUnitOfMeasureType, width).convertToLowestUnitOfMeasureType();
-                                                    var depthConversion = new Conversion(uomControl, depthUnitOfMeasureType, depth).convertToLowestUnitOfMeasureType();
-                                                    
-                                                    itemControl.createItemVolume(item, unitOfMeasureType, heightConversion.getQuantity(),
-                                                            widthConversion.getQuantity(), depthConversion.getQuantity(), getPartyPK());
+                    var itemVolumeType = ItemVolumeTypeLogic.getInstance().getItemVolumeTypeByName(this, form.getItemVolumeTypeName());
+
+                    if(!hasExecutionErrors()) {
+                        var itemVolume = itemControl.getItemVolume(item, unitOfMeasureType, itemVolumeType);
+
+                        if(itemVolume == null) {
+                            var volumeUnitOfMeasureKind = uomControl.getUnitOfMeasureKindByUnitOfMeasureKindUseTypeUsingNames(UomConstants.UnitOfMeasureKindUseType_VOLUME);
+
+                            if(volumeUnitOfMeasureKind != null) {
+                                var heightUnitOfMeasureTypeName = form.getHeightUnitOfMeasureTypeName();
+                                var heightUnitOfMeasureType = uomControl.getUnitOfMeasureTypeByName(volumeUnitOfMeasureKind,
+                                        heightUnitOfMeasureTypeName);
+
+                                if(heightUnitOfMeasureType != null) {
+                                    var height = Long.valueOf(form.getHeight());
+
+                                    if(height > 0) {
+                                        var widthUnitOfMeasureTypeName = form.getWidthUnitOfMeasureTypeName();
+                                        var widthUnitOfMeasureType = uomControl.getUnitOfMeasureTypeByName(volumeUnitOfMeasureKind,
+                                                widthUnitOfMeasureTypeName);
+
+                                        if(widthUnitOfMeasureType != null) {
+                                            var width = Long.valueOf(form.getWidth());
+
+                                            if(width > 0) {
+                                                var depthUnitOfMeasureTypeName = form.getDepthUnitOfMeasureTypeName();
+                                                var depthUnitOfMeasureType = uomControl.getUnitOfMeasureTypeByName(volumeUnitOfMeasureKind,
+                                                        depthUnitOfMeasureTypeName);
+
+                                                if(depthUnitOfMeasureType != null) {
+                                                    var depth = Long.valueOf(form.getDepth());
+
+                                                    if(depth > 0) {
+                                                        var heightConversion = new Conversion(uomControl, heightUnitOfMeasureType, height).convertToLowestUnitOfMeasureType();
+                                                        var widthConversion = new Conversion(uomControl, widthUnitOfMeasureType, width).convertToLowestUnitOfMeasureType();
+                                                        var depthConversion = new Conversion(uomControl, depthUnitOfMeasureType, depth).convertToLowestUnitOfMeasureType();
+
+                                                        itemControl.createItemVolume(item, unitOfMeasureType, itemVolumeType,
+                                                                heightConversion.getQuantity(), widthConversion.getQuantity(),
+                                                                depthConversion.getQuantity(), getPartyPK());
+                                                    } else {
+                                                        addExecutionError(ExecutionErrors.InvalidDepth.name(), depth);
+                                                    }
                                                 } else {
-                                                    addExecutionError(ExecutionErrors.InvalidDepth.name(), depth);
+                                                    addExecutionError(ExecutionErrors.UnknownDepthUnitOfMeasureTypeName.name(), depthUnitOfMeasureTypeName);
                                                 }
                                             } else {
-                                                addExecutionError(ExecutionErrors.UnknownDepthUnitOfMeasureTypeName.name(), depthUnitOfMeasureTypeName);
+                                                addExecutionError(ExecutionErrors.InvalidWidth.name(), width);
                                             }
                                         } else {
-                                            addExecutionError(ExecutionErrors.InvalidWidth.name(), width);
+                                            addExecutionError(ExecutionErrors.UnknownWidthUnitOfMeasureTypeName.name(), widthUnitOfMeasureTypeName);
                                         }
                                     } else {
-                                        addExecutionError(ExecutionErrors.UnknownWidthUnitOfMeasureTypeName.name(), widthUnitOfMeasureTypeName);
+                                        addExecutionError(ExecutionErrors.InvalidHeight.name(), height);
                                     }
                                 } else {
-                                    addExecutionError(ExecutionErrors.InvalidHeight.name(), height);
+                                    addExecutionError(ExecutionErrors.UnknownHeightUnitOfMeasureTypeName.name(), heightUnitOfMeasureTypeName);
                                 }
                             } else {
-                                addExecutionError(ExecutionErrors.UnknownHeightUnitOfMeasureTypeName.name(), heightUnitOfMeasureTypeName);
+                                addExecutionError(ExecutionErrors.UnknownVolumeUnitOfMeasureKind.name());
                             }
                         } else {
-                            addExecutionError(ExecutionErrors.UnknownVolumeUnitOfMeasureKind.name());
+                            addExecutionError(ExecutionErrors.DuplicateItemVolume.name(), item.getLastDetail().getItemName(),
+                                    unitOfMeasureType.getLastDetail().getUnitOfMeasureTypeName(),
+                                    itemVolumeType.getLastDetail().getItemVolumeTypeName());
                         }
-                    } else {
-                        addExecutionError(ExecutionErrors.DuplicateItemVolume.name());
                     }
                 } else {
                     addExecutionError(ExecutionErrors.UnknownItemUnitOfMeasureType.name(), itemName, unitOfMeasureTypeName);
